--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LJHOG's Website</title>
 </head>
+<link rel="stylesheet" href="styles.css">
 <body>
     <h1>LJHOG'S Personal Website</h1>
     <div>
