--- a/index.html
+++ b/index.html
@@ -3,23 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LJHOG's Website</title>
+    <title>HogInTheMachine</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<link rel="stylesheet" href="styles.css">
 <body>
-    <h1>LJHOG'S Personal Website</h1>
-    <div>
-    <ul>
-    <li><a href="https://github.com/LJHOG2233">Github </a></li>
-    <li><a href="https://www.youtube.com/@HogInTheMachine">Youtube</a></li>
-    <li><a href=https://www.twitch.tv/hoginthemachine>Twitch</a></li>
-    </ul>
-    </div>
+    <div class="container">
+        <h1 class="glitch" data-text="HogInTheMachine">HogInTheMachine</h1>
 
-    <footer>
-        <br>
-        <p>&copy; 2023 LJHOG. All rights reserved.</p>
-    </footer>
+        <p class="tagline">Welcome to the retro-future. Watch. Chill. Repeat.</p>
+
+        <div class="button-group">
+            <a href="https://www.twitch.tv/hoginthemachine" target="_blank" class="btn">Twitch</a>
+            <a href="https://www.youtube.com/@HogInTheMachine" target="_blank" class="btn">YouTube</a>
+            <a href="https://discord.gg/sBb7Fuxke4" target="_blank" class="btn">Join the Discord</a>
+        </div>
+
+        <section class="about">
+            <h2>About HogInTheMachine</h2>
+            <p>I stream games, cause chaos, and keep the retro vibes alive. Whether it's pixelated mayhem or neon-lit nonsense, you're in for a ride. Hop in, tune out, and vibe with the machine.</p>
+        </section>
+
+        <footer>
+            <p>&copy; 2025 HogInTheMachine. Stay glitchy.</p>
+        </footer>
+    </div>
 </body>
 </html>
-
